--- a/litrevu/templates/base.html
+++ b/litrevu/templates/base.html
@@ -12,17 +12,29 @@
   <header>
   <h1>LITrevu</h1>
     <nav>
-      <a href="">Flux</a>
-      <a href="">Posts</a>
-      <a href="">Abonnements</a>
-      <a href="{% url 'logout' %}">Se Déconnecter</a>
+      {% if user.is_authenticated %}
+        <a href="{% url 'home' %}">Flux</a>
+        <a href="{% url 'create-ticket' %}">Posts</a>
+        <a href="{% url 'follow_users' %}">Suivre des utilisateurs</a>
+        <form action="{% url 'logout' %}" method="post">
+          {% csrf_token %}
+          <button type="submit">Se déconnecter</button>
+        </form>
+      {% endif %}
     </nav>
   </header>
 
   {% block content %}{% endblock content %}
   {% if user.is_authenticated %}
-    <p>Vous êtes connecté en tant que {{ request.user }}.
-      </p>
+        {% if user.profile_photo %}
+        <img class="avatar" src="{{ user.profile_photo.url }}" alt="">
+      {% else %}
+        <img class="avatar" src="{% static 'blog/images/default_profile.png' %}" alt="">
+      {% endif %}
+    <p>Salut {{ request.user }}.</p>
+    <a href="{% url 'profile_photo_upload' %}">Changer la photo de profil</a>
+    <a href="{% url 'passwordchange' %}">Changer le mot de passe</a>
+
   {% endif %}
 </body>
 </html>
