add edit-review,  add-ticket, add posts

--- a/litrevu/authentication/templates/authentication/login.html
+++ b/litrevu/authentication/templates/authentication/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flexbox">
+<div class="flex-login">
   <div class="login">
     <h2>Inscrivez vous maintenant !</h2>
     <a href="{% url 'signup' %}"><button type="submit">S'inscrire</button></a>
