--- a/litrevu/blog/templates/blog/create_ticket.html
+++ b/litrevu/blog/templates/blog/create_ticket.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h2>Créatioin d'un billet :</h2>
+  <h2>Création d'un billet :</h2>
   <form action="" method="post" enctype="multipart/form-data">
     {{ form.as_p }}
     {% csrf_token %}
