--- a/litrevu/blog/templates/blog/create_review.html
+++ b/litrevu/blog/templates/blog/create_review.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Billet</h2>
-<p>rédiger votre critique pour {{ ticket.title }}</p>
-<img src="{{ ticket.image.url }}" alt="{{ ticket.title }}">
-<p>Description : {{ ticket.description }}</p>
-<p>Publié par : {{ ticket.uploader }}</p>
-<p>le {{ ticket.time_created }}</p>
-<h2>Publier une critique : </h2>
+<p>rédiger votre critique pour</p>
+{% include 'blog/partials/ticket_snippet.html' with ticket=ticket %}
+<h3>Publier votre critique : </h3>
 <form action="" method="post">
   {{ review_form.as_p }}
   {% csrf_token %}
