--- a/litrevu/blog/templates/blog/partials/review_snippet.html
+++ b/litrevu/blog/templates/blog/partials/review_snippet.html
@@ -1,18 +1,26 @@
 {% load static %}
 {% load blog_extras %}
-<div class="review">
-  {% if review.user.profile_photo %}
-    <img class="avatar" src="{{ review.user.profile_photo.url }}" alt="">
-  {% else %}
-    <img class="avatar" src="{% static '/images/default_profile.png' %}" alt="">
-  {% endif %}
-  <div class="post">
-    <a href="{% url 'view-review' review.ticket.id review.id %}">
-      <h3>{{ review.ticket.title }}</h3>
-      <p>{{ review.rating }}/5 stars</p>
-      <p>{{ review.headline }}</p>
-      <p>Auteur :{% get_poster_display review.user %} </p> 
-      <p>{% get_posted_at_display review.time_created %}</p>  
-    </a>
+<div class="feed-review">
+  <div class="review">
+    {% if review.user.profile_photo %}
+      <img class="avatar" src="{{ review.user.profile_photo.url }}" alt="">
+    {% else %}
+      <img class="avatar" src="{% static '/images/default_profile.png' %}" alt="">
+    {% endif %}
+    <div class="post">
+      <a href="{% url 'view-review' review.ticket.id review.id %}">
+        <h3>{{ review.ticket.title }}</h3>
+        <p>{{ review.rating }}/5 stars</p>
+        <p>{{ review.headline }}</p>
+        <p>Auteur :{% get_poster_display review.user %} </p> 
+        <p>{% get_posted_at_display review.time_created %}</p>  
+      </a>
+      {% if review|is_author:user %}
+        <a href="{% url 'edit_review' review.id %}"><button>Modifier</button></a>
+      {% endif %}
+    </div>
+  </div>
+  <div class="ticket-review">
+    {% include 'blog/partials/ticket_snippet.html' with ticket=review.ticket %}
   </div>
 </div>
