--- a/litrevu/blog/templates/blog/posts.html
+++ b/litrevu/blog/templates/blog/posts.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 {% load blog_extras %}
 {% block content %}
-  <h2>Votre Flux </h2>
-  <a href="{% url 'create-ticket' %}"><button>Demander une critique</button></a>
-  <a href="{% url 'create-review-ticket' %}"><button>Créer une critique</button></a>
+  <h2>Mes posts</h2>
     {% for instance in tickets_and_reviews %}
       {% if instance|model_type == 'Ticket' %}
         {% include 'blog/partials/ticket_snippet.html' with ticket=instance %}
