--- a/litrevu/blog/templates/blog/view_review.html
+++ b/litrevu/blog/templates/blog/view_review.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Billet:</h2>
-<img src="{{ ticket.image.url }}" alt="{{ ticket.title }}">
+<img src="{% if ticket.image %}{{ ticket.image.url }}{% endif %}"
+ alt="{{ ticket.title }}">
 <p>Description : {{ ticket.description }}</p>
-<p>Publié par : {{ ticket.uploader }}</p>
+<p>Publié par : {{ ticket.user }}</p>
 <p>le {{ ticket.time_created }}</p>
 
 <h2>Critique :</h2>
