--- a/litrevu/static/styles.css
+++ b/litrevu/static/styles.css
@@ -31,6 +31,12 @@ h2 {
     margin-top: 20px;
 }
 
+input, textarea {
+    display: block;
+    width: 98%;
+    margin: 15px;
+    padding: 5px;
+}
 
 a {
     text-decoration: none;
@@ -66,7 +72,8 @@ nav a {
 }
 
 
-.flexbox {
+.flex-login {
+    margin-top: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -82,10 +89,33 @@ nav a {
     margin: 10px;
 }
 
+.login input {
+    margin-top: 10px;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: larger;
+}
 
-.ticket a {
+.login button {
+    padding: 15px;
+    border-radius: 15px;
+    background-color: #170e42;
+    color:#fff;
+    /* font-weight: bold; */
+    font-size: larger;
+    border: 2px white solid;
+    cursor: pointer;
+}
+
+.login button:hover {
+    background-color: #fff;
+    color: #170e42;
+    border-color: #170e42;
+}
+
+.ticket {
     display: flex;
-    width: 900px;
+    max-width: 900px;
     background-color: #fff;
     justify-content: space-around;
     align-items: center;
@@ -95,7 +125,28 @@ nav a {
     padding: 20px;
 
 }
+.signup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.signup input {
+    padding: 25px;
+    border-radius: 5px;
+}
+
+.signup-button {
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 25px;
+}
+
+.signup-button button {
+    padding: 20px;
+}
 
 .post {
     display: flex;
@@ -108,17 +159,23 @@ nav a {
 }
 
 
+.feed-review {
+    display: flex;
+    width: 900px;
+    padding: 20px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    background-color: #fff;
+    flex-direction: column;
+    margin: 20px auto;
+}
 
 
 .review {
-    width: 900px;
-    margin: 20px auto;
     display: flex;
-    background-color: #fff;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     /* border: 1px black solid; */
-    padding: 20px;
 }
+
+
 
 
 footer {
