--- a/litrevu/authentication/templates/authentication/login.html
+++ b/litrevu/authentication/templates/authentication/login.html
@@ -25,7 +25,7 @@
             </div>
           {% endif %}
 
-          <form method="post" novalidate>
+          <form method="post">
             {% csrf_token %}
             {% for field in form %}
               <div class="mb-3">
