--- a/litrevu/authentication/templates/authentication/signup.html
+++ b/litrevu/authentication/templates/authentication/signup.html
@@ -9,7 +9,7 @@
     </div>
   {% endif %}
 
-  <form method="post" novalidate>
+  <form method="post">
     {% csrf_token %}
     {% for field in form %}
       <div class="mb-3">
