--- a/litrevu/blog/templates/blog/create_review.html
+++ b/litrevu/blog/templates/blog/create_review.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Billet</h2>
-<p>rédiger votre critique pour</p>
-{% include 'blog/partials/ticket_snippet.html' with ticket=ticket %}
-<h3>Publier votre critique : </h3>
-<form action="" method="post">
-  {{ review_form.as_p }}
-  {% csrf_token %}
-  <button type="submit">Publier</button>
-</form>
-{% endblock content %}
+  <h2>Rédiger votre critique pour :</h2>
+  {% include 'blog/partials/ticket_snippet.html' with ticket=ticket %}
+
+  <form method="post">
+    {% csrf_token %}
+    {% include 'blog/partials/edit_review.html' with form=review_form %}
+   <button type="submit" class="btn btn-primary">Envoyer</button>
+  </form>
+{% endblock %}
