--- a/litrevu/blog/templates/blog/view_review.html
+++ b/litrevu/blog/templates/blog/view_review.html
@@ -1,16 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Billet:</h2>
-<img src="{% if ticket.image %}{{ ticket.image.url }}{% endif %}"
- alt="{{ ticket.title }}">
-<p>Description : {{ ticket.description }}</p>
-<p>Publié par : {{ ticket.user }}</p>
-<p>le {{ ticket.time_created }}</p>
-
 <h2>Critique :</h2>
-<p>Titre : {{ review.headline }}</p>
-<h3>{{ review.rating }}/5</h3>
-<p>{{ review.body }}</p>
-<p>Publié par {{ review.user }} le {{ review.time_created }}</p>
+{% include 'blog/partials/review_snippet.html' with review=review %}
 {% endblock content %}
 
