--- a/litrevu/static/styles.css
+++ b/litrevu/static/styles.css
@@ -1,201 +1,9 @@
-* {
-  margin: 0 ;
-  box-sizing: border-box;
+#star-wrapper i {
+  transition: color .2s;
 }
-
-body {
-    margin: 0 auto;
-    width: 1200px;
-    /* height: 800px; */
-    /* border: 1px black solid; */
-    background-color: #f9f9f9;
-    color: #333;
-}
-
-
-main {
-    height: 80vh;
-    overflow-y: auto;
-
-}
-
-button {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-}
-
-
-h2 {
-    margin-bottom: 20px;
-    margin-top: 20px;
-}
-
-input, textarea {
-    display: block;
-    width: 98%;
-    margin: 15px;
-    padding: 5px;
-}
-
-a {
-    text-decoration: none;
-    color: #333;
-}
-
-header {
-    display:flex;
-    align-items: center;
-    /* margin-bottom: 50px; */
-    padding: 20px;
-    /* border: 1px black solid */
-    background-color: #170e42;
-    color:#fff
-}
-header h1 {
-    width: 60%;
-    text-align: right;
-    padding-right: 5%;
-}
-
-header nav {
-    text-align: right;
-    width: 40%;
-}
-
-header a {
-    color:#fff
-}
-
-nav a {
-    padding-left: 10px;
-}
-
-
-.flex-login {
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-
-.login {
-    text-align: center;
-}
-
-
-.login p {
-    margin: 10px;
-}
-
-.login input {
-    margin-top: 10px;
-    padding: 15px;
-    border-radius: 5px;
-    font-size: larger;
-}
-
-.login button {
-    padding: 15px;
-    border-radius: 15px;
-    background-color: #170e42;
-    color:#fff;
-    /* font-weight: bold; */
-    font-size: larger;
-    border: 2px white solid;
-    cursor: pointer;
-}
-
-.login button:hover {
-    background-color: #fff;
-    color: #170e42;
-    border-color: #170e42;
-}
-
-.ticket {
-    display: flex;
-    max-width: 900px;
-    background-color: #fff;
-    justify-content: space-around;
-    align-items: center;
-    margin: 20px auto;
-    /* border: 1px black solid; */
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    padding: 20px;
-
-}
-.signup {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.signup input {
-    padding: 25px;
-    border-radius: 5px;
-}
-
-.signup-button {
-    margin-left: 20px;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    gap: 25px;
-}
-
-.signup-button button {
-    padding: 20px;
-}
-
-.post {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.post img,.review img {
-    width: 80px;
-}
-
-
-.feed-review {
-    display: flex;
-    width: 900px;
-    padding: 20px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    background-color: #fff;
-    flex-direction: column;
-    margin: 20px auto;
-}
-
-
-.review {
-    display: flex;
-    /* border: 1px black solid; */
-}
-
-
-
-
-footer {
-    /* margin-top: 50px; */
-    background-color: #fff;
-    height: 80px;
-    display:flex;
-    align-items: center;
-    /* border: 1px black solid; */
-    justify-content: space-around;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-}
-
-
-footer img {
-    height: 80px;
-}
-
-
-main img {
-    width: 200px;
+#star-wrapper label:hover ~ label i,
+#star-wrapper label:hover i,
+#star-wrapper input:checked ~ label i,
+#star-wrapper input:checked + label i {
+  color: var(--bs-warning) !important;
 }
