--- a/authentication/templates/authentication/upload_photo_profile.html
+++ b/authentication/templates/authentication/upload_photo_profile.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h2>Télécharger une photo de profil</h2>
+<div class="container mt-5" style="max-width: 500px;">
+  <h2 class="mb-4 text-center">Télécharger une photo de profil</h2>
   <form action="" method="post" enctype="multipart/form-data">
-    {{ form.as_p }}
     {% csrf_token %}
-    <button type="submit">upload</button>
+    <div class="mb-3">
+      {{ form.as_p }}
+    </div>
+    <div class="d-grid">
+      <button type="submit" class="btn btn-primary">Télécharger</button>
+    </div>
   </form>
+</div>
 {% endblock content %}
