--- a/blog/templates/blog/partials/edit_review.html
+++ b/blog/templates/blog/partials/edit_review.html
@@ -11,7 +11,7 @@
       <label class="form-label">Note :</label>
       <div id="star-wrapper"
            class="d-inline-flex align-items-center flex-row-reverse">
-        {% for value,label in form.rating.field.choices %}
+        {% for value,label in form.rating.field.choices reversed %}
           <input
             type="radio"
             name="{{ form.rating.html_name }}"
